feat: add user profile APIs
