# backend/internal/domain/entity/user.go
@@ -6,8 +6,9 @@ import (
 )
 
 var (
-	ErrUserNotFound = errors.New("user not found")
-	ErrEmailTaken   = errors.New("email already taken")
+	ErrUserNotFound     = errors.New("user not found")
+	ErrEmailTaken       = errors.New("email already taken")
+	ErrPhoneNumberTaken = errors.New("Phone number already taken")
 )
 
 type User struct {
@@ -19,4 +20,20 @@ type User struct {
 	PasswordHash string `json:"-"`
 	AvatarURL    string
 	CreatedAt    time.Time
+}
+
+type PrivateProfile struct {
+	ID          int64
+	FirstName   string
+	LastName    string
+	Name        string
+	DateOfBirth *time.Time
+	PhoneNumber *string
+	AvatarURL   string
+}
+
+type PublicProfile struct {
+	ID        int64
+	Name      string
+	AvatarURL string
 }
